# tailrec.rs

./: .travis.yml  Cargo.toml  README.md
src/: lib.rs  main.rs  trampoline.rs
tests/: test.rs
