[package]

name = "tailrec"
version = "0.0.1"
authors = [ "Darin Morrison <darinmorrison+epsilonz@gmail.com>" ]
description = "Monadic trampolines for stackless recursion in Rust"
documentation = "http://www.rust-ci.org/epsilonz/tailrec.rs/doc/tailrec/"
keywords = ["functional", "monads", "recursion", "stackless", "trampolines"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/epsilonz/tailrec.rs"

[dependencies]

free = "*"

# [dev-dependencies.num]
# git = "https://github.com/rust-lang/num"
